2005-04-11  Dan Winship  <danw@novell.com>

	* libstetic/RadioGroupManager.cs (this[Gtk.Widget]): track the
	Destroyed event on radio widgets and update everything
	appropriately when a radio widget is destroyed.

	* libstetic/wrapper/Widget.cs (Delete): UnSelect when Deleting.

	* libstetic/wrapper/Container.cs (UnSelect): clear the Project
	selection when unselecting.

	* TODO: misc updates

2005-04-07  Dan Winship  <danw@novell.com>

	* glue/custom.c: 
	* libstetic/wrapper/Custom.cs: 
	* libstetic/wrapper/pixmaps/custom.png: Add custom widgets (a bit
	kludgy at the moment).

	* libstetic/wrapper/Calendar.cs (GladeImport): handle "display_options"

	* libstetic/wrapper/ComboBox.cs (Items): tag this properly for
	glade import/export

	* libstetic/wrapper/ScrolledWindow.cs (AddPlaceholder): override
	this to add the placeholder in a viewport

	* libstetic/wrapper/Widget.cs (ParentWrapper): fix to not get into
	an infinite loop on toplevel windows.

2005-04-07  Dan Winship  <danw@novell.com>

	Add Toolbar and its children, plus a bunch of things I had to fix
	to get there.
	
	* libstetic/DND.cs (Cancel): Returns the widget that was being
	dragged, after removing it from the DragWindow, so we don't get
	errors when you cancel a drag.

	* libstetic/HandleWindow.cs (Dispose): disconnect from
	selection.WidgetEvent.
	(SelectionEvent): if the event occurred in the handle window,
	always return true. Fixes the bug where widgets sometimes undrew
	themselves when they were selected.

	* libstetic/ObjectWrapperAttribute.cs (ObjectWrapperType): kill
	this enum
	(Type): make this a string

	* libstetic/ObjectWrapperType.cs: new static class containing
	constant strings for the predefined wrapper types (including the
	new ToolbarItem type).

	* libstetic/Placeholder.cs (OnDragDrop): remove this; Container
	can handle the event itself.

	* libstetic/PropertyDescriptor.cs: Fix this to be able to handle
	the case of a subproperty of a wrapper type (eg,